<resources>
    <string name="app_name">ICTU Calendar</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen" translatable="false">SplashScreenActivity</string>

    <string name="import_excel">Import Excel File</string>
    <string name="upload">Upload To Google Calendar</string>
    <string name="create_qr_code">Create QR Code</string>
    <string name="extracurricular_point">Extracurricular Point</string>
    <string name="setting">Setting</string>
    <string name="opinion_feedback" translatable="false">Opinion / Feedback</string>
    <string name="information">Information</string>
    <string name="not_available">Not Available!</string>

    <string name="input_time">Enter your time</string>
    <string name="input_place">Enter your place</string>
    <string name="input_note">Enter your note ...</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="edit_note">Edit Note</string>
    <string name="note">Note</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="agree">Agree</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="notification">Notification</string>
    <string name="upload_note">Do you want upload note?</string>
    <string name="uploading">Uploading to Google Calendar</string>
    <string name="require_internet">Upload to Google Calendar require Internet!</string>
    <string name="time_notification">Choose time get notification</string>
    <string name="cancel_upload">Do you want cancel upload now?</string>
    <string name="canceled_upload">Canceled Upload!</string>
    <string name="internet_problem">Internet Connection Problem!</string>
    <string name="uploaded_successful">Uploaded Successful</string>
    <string name="uploaded">Uploaded:</string>
    <string name="event">events</string>
    <string name="no_notification">No notification</string>
    <string name="event_start">At time of event</string>
    <string name="pre_15">15 minutes before</string>
    <string name="pre_30">30 minutes before</string>
    <string name="pre_45">45 minutes before</string>
    <string name="custom">Custom ...</string>
    <string name="no_access">ICTU Calendar not have access to your Google Calendar account! </string>
    <string name="delete">Do you want delete this event?</string>

    <string name="not_installed_gmail">Gmail application is not installed on your device!</string>
    <string name="sent_developer">Feedback has been sent to this app developer!</string>
    <string name="back_folder">Back to previous folder</string>
    <string name="back_main">Back to main screen</string>
    <string name="format_not_correct">File is not formatted correctly!</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">External Storage</string>

    <string name="info0">Thank for using!</string>
    <string name="info1">"   Software for viewing Calendar ICTU Calendar is built by a group of students of Software Engineering industry of ICTUaiming to improve programming skills of group as well as serving the viewing schedule for lecturers and students' schedules the school that the group is attending,the software public source code at: "</string>
    <string name="info2">https://github.com/congle7997/ICTUCalendar</string>
    <string name="info3">"   Entering the schedule file for teachers is very simple because the faculty members have only one calendar format,and the students will have a variety of calendar formats and software that only supports DAY format. When you take your calendar, you should pay attention!"</string>
    <string name="info4">"   A student calendar file in the form of DAY is as follows (other students have a calendar format like this, the software can still read normally):"</string>
    <string name="info5">"   In addition to displaying lecture schedules, the calendar also supports creating notes.Each blue dot indicates that the date has a schedule, each purple dot indicates that the date has 1 note, up to 1 day on the calendar displays 4 dots of the calendar and 1 note."</string>

    <string name="you_are">You are:</string>
    <string name="lecturer">Lecturer</string>
    <string name="student">Student</string>
    <string name="choose_lecturer_name">Choose lecturer name:</string>
    <string name="reading_excel_file">Reading excel file ...</string>
    <string name="save_data_successfully">Save data successfully!</string>
    <string name="save_note_successfully">Save note successfully!</string>
    <string name="day_format">Schedule file must be in DAY format!</string>
    <string name="saving_data">Saving data</string>
    <string name="getting_lecturers">Getting lecturers list</string>
</resources>
