<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_import_excel"
            android:icon="@drawable/ic_excel"
            android:title="@string/import_excel" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_sync"
            android:title="@string/upload" />
        <item
            android:id="@+id/nav_qr_code"
            android:icon="@drawable/ic_qr_code"
            android:title="@string/create_qr_code" />
        <item
            android:id="@+id/nav_extracurricular_point"
            android:icon="@drawable/ic_extracurricular_point"
            android:title="@string/extracurricular_point" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_opinion_feedback"
            android:icon="@drawable/ic_opinion_feedback"
            android:title="@string/opinion_feedback" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_information"
            android:title="@string/information" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
